--- a/resume2/deedy-resume-openfont.cls
+++ b/resume2/deedy-resume-openfont.cls
@@ -17,6 +17,7 @@
 \usepackage[UKenglish]{babel}
 \usepackage[UKenglish]{isodate}
 \usepackage{fontspec,xltxtra,xunicode}
+\usepackage{fontawesome}
 
 % Color definitions
 \definecolor{date}{HTML}{666666} 
